--- a/docs/source/pycistarget_scenic+_human_brain.ipynb
+++ b/docs/source/pycistarget_scenic+_human_brain.ipynb
@@ -1309,7 +1309,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## C. DEM"
+    "### C. DEM"
    ]
   },
   {
@@ -22442,7 +22442,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## C. DEM"
+    "### C. DEM"
    ]
   },
   {
