--- a/docs/source/pycistarget_scenic+_human_brain.ipynb
+++ b/docs/source/pycistarget_scenic+_human_brain.ipynb
@@ -146,6 +146,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### C. cisTarget"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "For running cisTarget there are some relevant parameters:\n",
     "\n",
     "- **ctx_db**: Path to the cisTarget database to use, or a preloaded cisTargetDatabase object (using the same region sets to be analyzed)\n",
@@ -1309,7 +1316,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### C. DEM"
+    "### D. DEM"
    ]
   },
   {
