--- a/notebooks/pycistarget_scenic+_human_brain.ipynb
+++ b/notebooks/pycistarget_scenic+_human_brain.ipynb
@@ -1,6 +1,13 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# PycisTarget on human cerebellum DARs and topics"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
@@ -8,7 +15,7 @@
     {
      "data": {
       "text/plain": [
-       "'0.1.dev83+gc0508a0'"
+       "'1.0.1.dev29+g95fd9fb'"
       ]
      },
      "execution_count": 1,
@@ -26,21 +33,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<a class=\"anchor\" id=\"top\"></a>\n",
-    "# PycisTarget on pycisTopic results\n",
-    "\n",
-    "* [1. Deriving cistromes using topics](#1)\n",
-    "    * [A. Loading your region sets](#2)\n",
-    "    * [B. cisTarget](#3)\n",
-    "* [2. Deriving cistromes using DARs](#6)\n",
-    "    * [A. Loading your region sets](#7)\n",
-    "    * [B. cisTarget](#8)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "**pycisTarget** is a python module that allows to perform motif enrichment analysis and derive genome-wide cistromes implementing **cisTarget** (Herrmann et al., 2012; Imrichova et al., 2015). In addition, *de novo* cistromes can also be derived (via **Homer** (Heinz et al., 2010)) and pycisTarget also includes a novel approach to derive differentially enriched motifs and cistromes between one or more groups of regions, named **Differentially Enriched Motifs (DEM)**."
    ]
   },
@@ -48,14 +40,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "In this tutorial we will show how to obtain cistromes from topics and DARs using cisTarget. For more information on how to use DEM and Homer, take a look to the Chip-seq tutorial."
+    "In this tutorial we will show how to obtain cistromes from topics and DARs using cisTarget. For more information on how to use DEM and Homer, take a look to the full tutorial, and within the SCENIC+ workflow, take a look to the wrapper function."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<a class=\"anchor\" id=\"1\"></a>\n",
     "## 1. Deriving cistromes using topics with cisTarget"
    ]
   },
@@ -63,7 +54,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<a class=\"anchor\" id=\"2\"></a>\n",
     "### A. Loading your region sets"
    ]
   },
@@ -120,30 +110,36 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "%%bash\n",
+    "#### Variables\n",
+    "genome_fasta = '/staging/leuven/stg_00002/lcb/resources/human/hg38/hg38.fa'\n",
+    "region_bed = '/staging/leuven/stg_00002/lcb/cbravo/Multiomics_pipeline/analysis/10x_multiome_brain/output/atac/pycistopic/consensus_peak_calling/consensus_regions.bed'\n",
+    "region_fasta = '/staging/leuven/stg_00002/lcb/cbravo/Multiomics_pipeline/analysis/10x_multiome_brain/output/atac/pycistopic/consensus_peak_calling/consensus_regions.fa'\n",
+    "database_suffix = '/staging/leuven/stg_00002/lcb/cbravo/Multiomics_pipeline/analysis/10x_multiome_brain/output/atac/pycistarget/dbs/human_brain'\n",
+    "path_to_motif_collection = 'PATH_TO_MOTIF_COLLECTION_IN_CLUSTER_BUSTER_FORMAT'\n",
+    "motif_list = 'PATH_TO_FILE_WITH_MOTIFS_TO_SCORE'\n",
+    "n_cpu = '20'\n",
     "#### Get fasta sequences\n",
-    "module load BEDTools\n",
-    "bedtools getfasta -fi /staging/leuven/stg_00002/lcb/resources/human/hg38/hg38.fa -bed /staging/leuven/stg_00002/lcb/cbravo/Multiomics_pipeline/analysis/10x_multiome_brain/output/atac/pycistopic/consensus_peak_calling/consensus_regions.bed > /staging/leuven/stg_00002/lcb/cbravo/Multiomics_pipeline/analysis/10x_multiome_brain/output/atac/pycistopic/consensus_peak_calling/consensus_regions.fa\n",
+    "module load BEDTools # In our system, load BEDTools\n",
+    "bedtools getfasta -fi ${genome_fasta} -bed ${region_bed} > ${region_fasta}\n",
     "#### Activate environment\n",
-    "conda_initialize /staging/leuven/stg_00002/lcb/ghuls/software/miniconda3/\n",
-    "conda activate create_cistarget_databases\n",
-    "#### Set ${create_cistarget_databases_dir} to https://github.com/aertslab/create_cisTarget_databases\n",
+    "my_conda_initialize # In our system, initialize conda\n",
+    "conda activate /staging/leuven/stg_00002/lcb/ghuls/software/miniconda3/envs/create_cistarget_databases \n",
+    "#### Set ${create_cistarget_databases_dir} to https://github.com/aertslab/create_cisTarget_databases \n",
     "create_cistarget_databases_dir='/staging/leuven/stg_00002/lcb/ghuls/software/create_cisTarget_databases'\n",
-    "#### Score the motifs in 10 chunks; we will use the non-redundant db here\n",
-    "for current_part in {1..10} ; do\n",
-    "     python3.8 ${create_cistarget_databases_dir}/create_cistarget_motif_databases.py \\\n",
-    "         -f /staging/leuven/stg_00002/lcb/cbravo/Multiomics_pipeline/analysis/10x_multiome_brain/output/atac/pycistopic/consensus_peak_calling/consensus_regions.fa \\\n",
-    "         -M /staging/leuven/stg_00002/lcb/cbravo/motif_clustering/RNA_harmony_snn_res_5_clusters/motif_collection_combined_motifs_stamp_and_singlets/singletons/ \\\n",
-    "         -m /staging/leuven/stg_00002/lcb/cbravo/motif_clustering/RNA_harmony_snn_res_5_clusters/motif_collection_combined_motifs_stamp_and_singlets/motifs.txt \\\n",
-    "         -p ${current_part} 10 \\\n",
-    "         -o /staging/leuven/stg_00002/lcb/cbravo/Multiomics_pipeline/analysis/10x_multiome_brain/output/atac/pycistarget/dbs/human_brain \\\n",
-    "         -t 20\n",
-    "done\n",
-    "#### Merge scores\n",
-    "${create_cistarget_databases_dir}/combine_partial_regions_or_genes_vs_motifs_or_tracks_cistarget_dbs.py -i  /staging/leuven/stg_00002/lcb/cbravo/Multiomics_pipeline/analysis/10x_multiome_brain/output/atac/pycistarget/dbs/human_brain -o /staging/leuven/stg_00002/lcb/cbravo/Multiomics_pipeline/analysis/10x_multiome_brain/output/atac/pycistarget/dbs/\n",
-    "#### Remove chunks\n",
-    "rm /staging/leuven/stg_00002/lcb/cbravo/Multiomics_pipeline/analysis/10x_multiome_brain/output/atac/pycistarget/dbs/human_brain*part*\n",
+    "#### Score the motifs \n",
+    "${create_cistarget_databases_dir}/create_cistarget_motif_databases.py \\\n",
+    "-f ${region_fasta} \\\n",
+    "-M ${path_to_motif_collection} \\\n",
+    "-m ${motif_list} \\\n",
+    "-o ${database_suffix} \\\n",
+    "-t ${n_cpu} \\\n",
+    "-l \\\n",
+    "-s 555\n",
+    "done \n",
     "#### Create rankings\n",
-    "${create_cistarget_databases_dir}/convert_motifs_or_tracks_vs_regions_or_genes_scores_to_rankings_cistarget_dbs.py -i /staging/leuven/stg_00002/lcb/cbravo/Multiomics_pipeline/analysis/10x_multiome_brain/output/atac/pycistarget/dbs/human_brain.motifs_vs_regions.scores.feather -s 555"
+    "motifs_vs_regions_scores_feather = 'PATH_TO_MOTIFS_VS_REGIONS_SCORES_DATABASE'\n",
+    "${create_cistarget_databases_dir}/convert_motifs_or_tracks_vs_regions_or_genes_scores_to_rankings_cistarget_dbs.py -i ${database_suffix}.motifs_vs_regions.scores.feather -s 555"
    ]
   },
   {
@@ -151,6 +147,7 @@
    "metadata": {},
    "source": [
     "For running cisTarget there are some relevant parameters:\n",
+    "\n",
     "- **ctx_db**: Path to the cisTarget database to use, or a preloaded cisTargetDatabase object (using the same region sets to be analyzed)\n",
     "- **region_sets**: The input sets of regions \n",
     "- **specie**: Specie to which region coordinates and database belong to. To annotate motifs to TFs using cisTarget annotations, possible values are 'mus_musculus', 'homo_sapiens' or 'drosophila_melanogaster'. If any other value, motifs will not be annotated to a TF unless providing a customized annotation.\n",
@@ -190,9 +187,9 @@
    "source": [
     "# Preload db, you can also just provide the path to the db. Preloading the database is useful if you want to test different parameters. \n",
     "# This will take some time depending on the size of your database\n",
-    "db = '/staging/leuven/stg_00002/lcb/cbravo/Multiomics_pipeline/analysis/10x_multiome_brain/output/atac/pycistarget/dbs_v2/human_brain.regions_vs_motifs.rankings.feather'\n",
+    "db = '/staging/leuven/stg_00002/lcb/cbravo/Multiomics_pipeline/analysis/10x_multiome_brain/output/atac/pycistarget/dbs/human_brain.regions_vs_motifs.rankings.feather'\n",
     "ctx_db = cisTargetDatabase(db, region_sets)   \n",
-    "# Remove dbcorr motifs\n",
+    "# Remove dbcorr motifs (only if using cisTarget v9)\n",
     "ctx_db.db_rankings = ctx_db.db_rankings[~ctx_db.db_rankings.index.str.contains(\"dbcorr\")]"
    ]
   },
@@ -337,8 +334,7 @@
     "cistarget_dict = run_cistarget(ctx_db = ctx_db,\n",
     "                               region_sets = region_sets,\n",
     "                               specie = 'homo_sapiens',\n",
-    "                               annotation_version = 'v9nr_clust',\n",
-    "                               path_to_motif_annotations = '/staging/leuven/stg_00002/lcb/cbravo/motif_clustering/RNA_harmony_snn_res_5_clusters/motif_collection_combined_motifs_stamp_and_singlets/hs_annotation.tsv',\n",
+    "                               annotation_version = 'v9nr_clust', #Use v10nr_clust for the latest motif collection\n",
     "                               auc_threshold = 0.005,\n",
     "                               nes_threshold = 3.0,\n",
     "                               rank_threshold = 0.05,\n",
@@ -1313,14 +1309,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "[[Back to top]](#top)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "<a class=\"anchor\" id=\"6\"></a>\n",
     "## 2. Deriving cistromes using DARs"
    ]
   },
@@ -1328,7 +1316,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<a class=\"anchor\" id=\"7\"></a>\n",
     "### A. Loading your region sets"
    ]
   },
@@ -1367,7 +1354,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<a class=\"anchor\" id=\"8\"></a>\n",
     "### B. cisTarget"
    ]
   },
@@ -2453,9 +2439,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "DEV IMAGE - pyCisTopic latest (use at own risk)",
+   "display_name": "DEV IMAGE - SCENIC+ latest (use at own risk)",
    "language": "python",
-   "name": "pycistopic_dev"
+   "name": "pyscenic_plus_dev"
   },
   "language_info": {
    "codemirror_mode": {
@@ -2467,7 +2453,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.11"
+   "version": "3.8.13"
   }
  },
  "nbformat": 4,
