Clean after rtd

--- a/notebooks/pycistarget_chip-RTD.ipynb
+++ b/notebooks/pycistarget_chip-RTD.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# PycisTarget on mouse liver ChIP-seq data"
+    "# Motif enrichment with pycisTarget using mouse liver ChIP-seq regions"
    ]
   },
   {
@@ -15,40 +15,7 @@
    "source": [
     "%matplotlib inline\n",
     "import pycistarget\n",
-    "pycistarget.__version__\n",
-    "import warnings\n",
-    "warnings.filterwarnings(\"ignore\")\n",
-    "# Set stderr to null to avoid strange messages from ray\n",
-    "import sys\n",
-    "import os\n",
-    "_stderr = sys.stderr                                                         \n",
-    "null = open(os.devnull,'wb')"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Index\n",
-    "<a class=\"anchor\" id=\"top\"></a>\n",
-    "* [0. Getting your input region sets](#1)\n",
-    "* [1. cisTarget](#5)\n",
-    "    * [A. Creating cisTarget databases](#6)\n",
-    "    * [B. Running cisTarget](#7)\n",
-    "    * [C. Exploring cisTarget results](#8)\n",
-    "* [2. Differential Motif Enrichment (DEM)](#9)\n",
-    "    * [A. Creating DEM databases](#10)\n",
-    "    * [B. Running DEM](#11)\n",
-    "    * [C. Exploring DEM results](#12)\n",
-    "    * [D. Advanced usage](#13)\n",
-    "        * [1. Thresholding on the mean foreground signal](#14)\n",
-    "        * [2. Using a fixed threshold for the motif hits](#15)\n",
-    "        * [3. Using a shuffled background](#16)\n",
-    "        * [4. Specifying contrasts](#17)\n",
-    "        * [5. Balancing promoter content](#17)\n",
-    "* [3. Homer](#2)\n",
-    "    * [A. Running Homer](#3)\n",
-    "    * [B. Exploring Homer results](#4)"
+    "pycistarget.__version__"
    ]
   },
   {
@@ -62,7 +29,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<a class=\"anchor\" id=\"1\"></a>\n",
     "## 0. Getting your input region sets"
    ]
   },
@@ -97,7 +63,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<a class=\"anchor\" id=\"5\"></a>\n",
     "## 1. cisTarget"
    ]
   },
@@ -105,8 +70,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<a class=\"anchor\" id=\"6\"></a>\n",
-    "#### A. Creating cisTarget databases"
+    "### A. Creating cisTarget databases"
    ]
   },
   {
@@ -160,15 +124,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "[[Back to top]](#top)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "<a class=\"anchor\" id=\"7\"></a>\n",
-    "#### B. Running cisTarget"
+    "### B. Running cisTarget"
    ]
   },
   {
@@ -176,6 +132,7 @@
    "metadata": {},
    "source": [
     "For running cisTarget there are some relevant parameters:\n",
+    "\n",
     "- **ctx_db**: Path to the cisTarget database to use, or a preloaded cisTargetDatabase object. In this tutorial we will use the precomputed mm10 database (using SCREEN regions), available at https://resources.aertslab.org/cistarget/.\n",
     "- **region_sets**: The input sets of regions \n",
     "- **specie**: Specie to which region coordinates and database belong to. To annotate motifs to TFs using cisTarget annotations, possible values are 'mus_musculus', 'homo_sapiens' or 'drosophila_melanogaster'. If any other value, motifs will not be annotated to a TF unless providing a customized annotation.\n",
@@ -256,15 +213,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "[[Back to top]](#top)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "<a class=\"anchor\" id=\"8\"></a>\n",
-    "#### C. Exploring cisTarget results"
+    "### C. Exploring cisTarget results"
    ]
   },
   {
@@ -910,23 +859,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "[[Back to top]](#top)"
+    "## 2. DEM"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<a class=\"anchor\" id=\"9\"></a>\n",
-    "# 2. DEM"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "<a class=\"anchor\" id=\"10\"></a>\n",
-    "#### A. Creating your DEM databases"
+    "### A. Creating your DEM databases"
    ]
   },
   {
@@ -977,15 +917,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "[[Back to top]](#top)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "<a class=\"anchor\" id=\"11\"></a>\n",
-    "#### B. Running DEM"
+    "### B. Running DEM"
    ]
   },
   {
@@ -993,6 +925,7 @@
    "metadata": {},
    "source": [
     "For running DEM there are some relevant parameters:\n",
+    "\n",
     "- **dem_db**: Path to the DEM database to use, or a preloaded DEMDatabase object (using the same region sets to be analyzed)\n",
     "- **region_sets**: The input sets of regions \n",
     "- **specie**: Specie to which region coordinates and database belong to. To annotate motifs to TFs using cisTarget annotations, possible values are 'mus_musculus', 'homo_sapiens' or 'drosophila_melanogaster'. If any other value, motifs will not be annotated to a TF unless providing a customized annotation.\n",
@@ -1080,15 +1013,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "[[Back to top]](#top)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "<a class=\"anchor\" id=\"12\"></a>\n",
-    "#### C. Exploring DEM results"
+    "### C. Exploring DEM results"
    ]
   },
   {
@@ -1663,27 +1588,18 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "[[Back to top]](#top)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
    "metadata": {
     "tags": []
    },
    "source": [
-    "<a class=\"anchor\" id=\"13\"></a>\n",
-    "#### D. Advanced usage"
+    "### D. Advanced usage"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<a class=\"anchor\" id=\"14\"></a>\n",
-    "##### 1. Thresholding on the mean foreground signal"
+    "#### 1. Thresholding on the mean foreground signal"
    ]
   },
   {
@@ -2021,15 +1937,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "[[Back to top]](#top)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "<a class=\"anchor\" id=\"15\"></a>\n",
-    "##### 2. Using a fixed threshold for the motif hits"
+    "#### 2. Using a fixed threshold for the motif hits"
    ]
   },
   {
@@ -2367,15 +2275,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "[[Back to top]](#top)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "<a class=\"anchor\" id=\"16\"></a>\n",
-    "##### 3. Using a shuffled background"
+    "#### 3. Using a shuffled background"
    ]
   },
   {
@@ -2765,15 +2665,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "[[Back to top]](#top)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "<a class=\"anchor\" id=\"17\"></a>\n",
-    "##### 4. Specifying contrasts"
+    "#### 4. Specifying contrasts"
    ]
   },
   {
@@ -3106,15 +2998,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "[[Back to top]](#top)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "<a class=\"anchor\" id=\"18\"></a>\n",
-    "##### 5. Balancing promoter content"
+    "#### 5. Balancing promoter content"
    ]
   },
   {
@@ -3458,14 +3342,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "[[Back to top]](#top)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "<a class=\"anchor\" id=\"2\"></a>\n",
     "## 3. Homer"
    ]
   },
@@ -3490,8 +3366,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<a class=\"anchor\" id=\"3\"></a>\n",
-    "#### A. Running Homer"
+    "### A. Running Homer"
    ]
   },
   {
@@ -3499,6 +3374,7 @@
    "metadata": {},
    "source": [
     "For running Homer there are some relevant parameters:\n",
+    "\n",
     "- **homer_path**: Path to the executable Homer files. Homer has to be also accessible in the python paths too.\n",
     "- **region_sets**: The input sets of regions \n",
     "- **outdir**: Output directory\n",
@@ -3587,14 +3463,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "[[Back to top]](#top)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "<a class=\"anchor\" id=\"4\"></a>\n",
     "### B. Exploring Homer results"
    ]
   },
@@ -23803,13 +23671,6 @@
     "from pycistarget.utils import *\n",
     "cebpa_cistrome_pr = pr.PyRanges(region_names_to_coordinates(homer_dict['Cebpa_ERR235722_summits_order_by_score_extended_250bp_top5K'].denovo_cistromes['Cebpa_(2886r)']))\n",
     "cebpa_cistrome_pr.to_bed(path='/staging/leuven/stg_00002/lcb/cbravo/Multiomics_pipeline/pycistarget_tutorial/Homer/cebpa_cistrome_example.bed')"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "[[Back to top]](#top)"
    ]
   }
  ],
